--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,15 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-upstream-ontologist = ">=0.1.45"
+upstream-ontologist = "0.2"
 pyo3 = "0.22"
 pyo3-log = ">=0.7"
 reqwest = { version = ">=0.11", features=["blocking", "json"], default-features = false }
 url = "2.5"
 serde_json = "1"
 log = "0.4"
+tokio = { version = "1.41.0", features = ["rt"] }
+futures = "0.3.31"
 
 [features]
 default = []
