--- a/debian/control
+++ b/debian/control
@@ -3,49 +3,17 @@ Rules-Requires-Root: no
 Standards-Version: 4.6.2
 Build-Depends: debhelper-compat (= 13),
                dh-python,
-               librust-breezyshim-dev,
-               librust-clap-dev,
-               librust-configparser-dev,
-               librust-debcargo-dev,
-               librust-debbugs-dev,
-               librust-debian-changelog-dev,
-               librust-debian-control-dev,
-               librust-debian-copyright-dev,
-               librust-debian-watch-dev,
-               librust-distro-info-dev,
-               librust-html5ever-dev,
-               librust-log-dev,
-               librust-mailparse-dev,
-               librust-makefile-lossless-dev,
-               librust-opam-file-rs-dev,
                librust-pyo3-dev,
                librust-pyo3-log-dev,
-               librust-pretty-assertions-dev,
-               librust-pulldown-cmark-dev,
-               librust-pyproject-toml-dev,
-               librust-python-pkginfo-dev,
-               librust-reqwest-dev,
-               librust-rust-ini-dev,
-               librust-rst-parser-dev (>= 0.4.0-3),
-               librust-rst-renderer-dev,
-               librust-select-dev,
-               librust-serde-yaml-dev,
-               librust-scraper-dev,
-               perl-doc,
+               librust-reqwest+blocking-dev,
+               librust-reqwest+json-dev,
+               librust-upstream-ontologist-dev,
+               librust-url-dev,
+               librust-serde-json-dev,
+               librust-log-dev,
                python3-all,
-               python3-breezy,
-               python3-bs4,
-               python3-debian,
-               python3-debmutate,
-               python3-distro-info,
-               python3-docutils,
-               python3-dulwich,
-               python3-lxml,
-               python3-markdown,
-               python3-ruamel.yaml,
                python3-setuptools,
-               python3-setuptools-rust,
-               python3-toml
+               python3-setuptools-rust
 Priority: optional
 Section: python
 Homepage: https://github.com/jelmer/upstream-ontologist-py
