--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,7 +103,7 @@ environment = {PATH="$HOME/.cargo/bin:$PATH"}
 skip = "pp*-* *musllinux*"
 
 [tool.cibuildwheel.linux]
-before-build = "if command -v yum; then yum -y install openssl-devel; fi && if command -v apk; then apk add openssl-dev pkgconfig; fi && pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y && rustup show"
+before-build = "if command -v yum; then yum -y install libatomic openssl-devel; fi && if command -v apk; then apk add openssl-dev pkgconfig; fi && pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y && rustup show"
 
 [tool.cibuildwheel.macos]
 macos = "x86_64 arm64 universal2"
