--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -28,7 +28,8 @@ jobs:
           python -m pip install -U pip "setuptools>=60" setuptools-rust
       - name: Install dependencies (Linux)
         run: |
-          sudo apt install libxml2-dev libxslt1-dev
+          sudo apt -y update
+          sudo apt -y install libxml2-dev libxslt1-dev
         if: "matrix.os == 'ubuntu-latest'"
       - name: Install dependencies (Mac OS X)
         run: |
