--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "upstream-ontologist-py"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -12,7 +12,7 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-upstream-ontologist = "0.2"
+upstream-ontologist = ">=0.2.3"
 pyo3 = "0.22"
 pyo3-log = ">=0.7"
 reqwest = { version = ">=0.11", features=["blocking", "json"], default-features = false }
