--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,15 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-upstream-ontologist = ">=0.2.11"
-pyo3 = "0.25"
-pyo3-log = ">=0.7"
-reqwest = { version = ">=0.11", features=["blocking", "json"], default-features = false }
+#upstream-ontologist = "0.3"
+upstream-ontologist = "0.3.1"
+pyo3 = "=0.27"
+pyo3-log = "0.13"
+reqwest = { version = ">=0.11,<0.13", features=["blocking", "json"], default-features = false }
 url = "2.5"
 serde_json = "1"
 log = "0.4"
-tokio = { version = "1.48.0", features = ["rt"] }
+tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 futures = "0.3.31"
 
 [features]
